--- a/css/style.css
+++ b/css/style.css
@@ -3540,7 +3540,7 @@ footer {
   min-height: 300px;
   background-size: cover;
   position: relative;
-  padding: 180px 0; }
+  padding: 55px 0; }
   .header_inner .intro_wrapper:before {
     background: transparent;
     content: "";
@@ -3550,8 +3550,8 @@ footer {
     left: 0;
     top: 0; }
   .header_inner .intro_wrapper h1 {
-    font-size: 60px;
-    line-height: 80px;
+	font-size: 34px;
+    line-height: 161px;
     font-weight: 700;
     color: #ffffff;
     margin: 0; }
@@ -4353,10 +4353,12 @@ footer {
               left: -30px; }
 
 .contact_page .intro_wrapper {
-  background: url("../images/banner/inner_banner_3.jpg") no-repeat center center !important; }
-
+  /* background: url("../images/banner/inner_banner_3.jpg") no-repeat center center !important; 
+ */
+ } 
+  
 .contact_info_wrapper {
-  padding: 120px 0; }
+  padding: 40px 0; }
   .contact_info_wrapper .title {
     font-size: 40px;
     font-weight: 700;
