--- a/css/style.css
+++ b/css/style.css
@@ -5508,7 +5508,7 @@ footer {
     padding: 50px 0px;
     position: relative;
     z-index: 1;
-    margin: 0 0 50px;
+    margin: 36px 0 50px;
 	}
     #courses_details_wrapper .blog-right-items .courses_features .items-title, .event_details_wrapper .blog-right-items .courses_features .items-title {
       text-align: left; }
