--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ select {
 .title h2 {
   font-family: "Roboto", sans-serif;
   letter-spacing: 2px;
-  font-weight: 500; }
+  font-weight: 5	00; }
 
 .p-l {
   padding-left: 15px; }
